# periphery

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .mise.toml  .periphery.linux.yml  .periphery.yml  .swiftformat  .swiftlint.yml  BUILD.bazel  CHANGELOG.md  Gemfile  LICENSE.md  MODULE.bazel  Makefile  Package.resolved  Package.swift  Periphery.podspec  README.md  WORKSPACE
Sources/: BUILD.bazel
Sources/BaseLogger/: BaseLogger.swift
Sources/Commands/: CheckUpdateCommand.swift  ClearCacheCommand.swift  FrontendCommand.swift  ScanCommand.swift  VersionCommand.swift
Sources/Configs/: Periphery.xcconfig
Sources/Configuration/: ColorOption.swift  Configuration.swift  ConfigurationRepository.swift  OutputFormat.swift  SonarQubeRuleSeverity.swift
Sources/CrossModuleRetentionFixtures/: CrossModuleSuperclass.swift
Sources/Extensions/: Array+Extension.swift  Collection+Extension.swift  FilePath+Extension.swift  FilePath+Glob.swift  FilenameMatcher+Extension.swift  Set+Extension.swift  String+Extension.swift  String+Version.swift
Sources/Frontend/: BazelProjectSetupGuide.swift  CommonSetupGuide.swift  DeclarationSorter.swift  GuidedSetup.swift  Logger+Extension.swift  PlanSuggester.swift  Project.swift  RedundantDeclarationReducer.swift  SPMProjectSetupGuide.swift  Scan.swift  ScanBehavior.swift  ScanResult.swift  UpdateChecker.swift  Version.swift  main.swift
Sources/Frontend/Commands/: CheckUpdateCommand.swift  ClearCacheCommand.swift  FrontendCommand.swift  ScanBehavior.swift  ScanCommand.swift  VersionCommand.swift
Sources/Frontend/Formatters/: CheckstyleFormatter.swift  CodeClimateFormatter.swift  CsvFormatter.swift  JsonFormatter.swift  OutputDeclarationFilter.swift  OutputFormatter.swift  XcodeFormatter.swift
Sources/Indexer/: AssetCatalogIndexer.swift  AssetCatalogParser.swift  IndexPipeline.swift  IndexPlan.swift  IndexTarget.swift  Indexer.swift  InfoPlistIndexer.swift  InfoPlistParser.swift  JobPool.swift  SourceFileCollector.swift  SourceGraphDebugger.swift  SwiftIndexer.swift  XCDataModelIndexer.swift  XCDataModelParser.swift  XCMappingModelIndexer.swift  XCMappingModelParser.swift  XCStringsIndexer.swift  XCStringsParser.swift  XibIndexer.swift  XibParser.swift
Sources/Logger/: Logger.swift
Sources/Periphery/: main.swift
Sources/PeripheryKit/: Baseline.swift  Benchmark.swift  Cache.swift  Configuration.swift  Constants.swift  DebugUtil.swift  DeclarationSorter.swift  DiagnosisConsole.swift  FeatureManager.swift  Injector.swift  JobPool.swift  Logger.swift  PeripheryKitError.swift  ProjectDriver.swift  RedundantDeclarationReducer.swift  Scan.swift  ScanResult.swift  ScanResultBuilder.swift  ScanSyntax.swift  Shell.swift  SourceFile.swift  SourceLocation.swift  SwiftVersion.swift  SwiftVersionParser.swift  TargetSourceFileUniquenessChecker.swift  Version.swift
Sources/PeripheryKit/Analyzer/: Analyzer.swift  SourceGraphVisitor.swift
Sources/PeripheryKit/Bazel/: Bazel.swift  BazelProjectDriver.swift
Sources/PeripheryKit/CodeRemoval/: EmptyExtensionSyntaxRemover.swift  EmptyFileVisitor.swift  PublicAccessibilitySyntaxRemover.swift  RedundantProtocolSyntaxRemover.swift  ScanResultRemover.swift  SyntaxRemover.swift  TriviaSplitting.swift  UnusedDeclarationSyntaxRemover.swift
Sources/PeripheryKit/Extensions/: Digest+Extension.swift  PathKit+Extension.swift  String+Extension.swift  String+Version.swift
Sources/PeripheryKit/Formatters/: ActionsFormatter.swift  CheckstyleFormatter.swift  CodeClimateFormatter.swift  CsvFormatter.swift  GitHubActionsFormatter.swift  JsonFormatter.swift  OutputDeclarationFilter.swift  OutputFormatter.swift  XcodeFormatter.swift
Sources/PeripheryKit/Frontend/: CommonSetupGuide.swift  GuidedSetup.swift  SetupGuide.swift  UpdateChecker.swift
Sources/PeripheryKit/Generic/: GenericProjectDriver.swift
Sources/PeripheryKit/Indexer/: Accessibility.swift  AssetReference.swift  Declaration.swift  Entity.swift  (+22 more)
Sources/PeripheryMain/: main.swift
Sources/ProjectDrivers/: BazelProjectDriver.swift  GenericProjectDriver.swift  Project.swift  ProjectDriver.swift  SPM.swift  SPMProjectDriver.swift  XcodeProjectDriver.swift
Sources/ProjetDrivers/: GenericProjectDriver.swift  XcodeProjectDriver.swift
Sources/RetentionFixturesCrossModule/: CrossModuleReferenced.swift  ExternalAssociatedType.swift
Sources/Scan/: Scan.swift
Sources/Shared/: Benchmark.swift  Configuration.swift  Constants.swift  Injector.swift  JobPool.swift  Logger.swift  OutputFormat.swift  PeripheryError.swift  PeripheryKitError.swift  ProjectKind.swift  ProjectSetupGuide.swift  PropertyTypeSanitizer.swift  SPM.swift  SetupGuide.swift  Shell.swift  SwiftVersion.swift  SwiftVersionParser.swift  UnfairLock.swift
Sources/SourceGraph/: SourceGraph.swift  SourceGraphDebugger.swift  SourceGraphExporter.swift  SourceGraphMutator.swift  SourceGraphMutatorRunner.swift  SourceGraphMutex.swift  SynchronizedSourceGraph.swift
Sources/StaticAnalyse/: CommentCommand.swift  MultiplexingSyntaxVisitor.swift  UnusedParameterAnalyzer.swift
Sources/SyntaxAnalysis/: CommentCommand.swift  DeclarationSyntaxVisitor.swift  FunctionCollectorVisitor.swift  ImageAssetReferenceSyntaxVisitor.swift  ImportSyntaxVisitor.swift  LocalizedStringSyntaxVisitor.swift  MultiplexingSyntaxVisitor.swift  SourceLOCCounter.swift  SourceLocationBuilder.swift  TypeSyntaxInspector.swift  UnusedParameterAnalyzer.swift  UnusedParameterParser.swift
Sources/Utils/: Logger+Configuration.swift  Logger.swift  Shell.swift  SwiftVersion.swift  SwiftVersionParser.swift
Sources/XcodeSupport/: TargetSourceFileUniquenessChecker.swift  XcodeProject.swift  XcodeProjectDriver.swift  XcodeProjectSetupGuide.swift  XcodeProjectlike.swift  XcodeScheme.swift  XcodeSchemeAction.swift  XcodeTarget.swift  XcodeWorkspace.swift  Xcodebuild.swift  XcodebuildSettingsParser.swift
bazel/dev/: BUILD.bazel
bazel/internal/: BUILD.bazel  bazel_baseline.json  extensions.bzl  opt.bzl  repositories.bzl  run.sh  scan.bzl  scan_template.sh
bazel/tests/: BUILD.bazel  Clean.swift  Unused.swift  verify_unused_report.sh
(+838 files in other folders)
