package_group(
    name = "generated",
    includes = [
        "@periphery_generated//:package_group",
    ],
)

package_group(
    name = "package_group",
    packages = ["//..."],
)

sh_binary(
    name = "periphery",
    srcs = ["//bazel/internal:run.sh"],
    data = [
        "//Sources:Frontend_opt",
    ],
)
